--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "/demo/"
   ],
   "dependencies": {
-    "ll-theme": "LeisureLinkElements/ll-theme#~0.0.5",
+    "ll-theme": "LeisureLinkElements/ll-theme",
     "ll-throbber": "LeisureLinkElements/ll-throbber",
     "polymer": "Polymer/polymer#^1.0.0"
   },
